# consolation

./: .gitignore  CMakeLists.txt  build.sh
include/: Canvas.h  Engine.h  GameObject.h  InputHandler.h  Player.h  PlayerScene.h  Scene.h  Window.h
src/: Canvas.cpp  Engine.cpp  InputHandler.cpp  Player.cpp  main.cpp  test.cpp
